--- a/src/app/main/components/definition-card/definition-card.component.html
+++ b/src/app/main/components/definition-card/definition-card.component.html
@@ -1,1 +1,8 @@
-<p>definition-card works!</p>
+<div *ngIf="definition" class="card">
+    <div class="word">
+        {{ definition.word }}
+    </div>
+    <div class="meaning">
+        {{ definition.meaning }}
+    </div>
+</div>
